--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ pandas==1.4.2
 poetry==1.1.13
 pyodbc==4.0.32
 python-dotenv==0.20.0
-pyx12==3.0.0rc3
+pyx12==2.3.3
 requests-negotiate-sspi==0.5.2
 sqlacodegen==3.0.0b2
 SQLAlchemy==1.4.35
